--- a/web/src/app/components/admin-dashboard/shared/side-panel-patient/side-panel-patient.component.scss
+++ b/web/src/app/components/admin-dashboard/shared/side-panel-patient/side-panel-patient.component.scss
@@ -667,3 +667,9 @@ input[type="checkbox"] {
   background-color: #164d61;
 
 }
+
+.disabled {
+  pointer-events: none;
+  opacity: 0.5;
+  cursor: not-allowed;
+}
