--- a/web/src/app/components/admin-dashboard/components/editpatient/editpatient.component.scss
+++ b/web/src/app/components/admin-dashboard/components/editpatient/editpatient.component.scss
@@ -2469,3 +2469,10 @@ button {
   margin-left: 10px;
   margin-top: -5px;
 }
+// space in between the schedule dropdowns
+.schedule-column {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  margin-top: -10px;
+}
